--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "json-server": ""
+    "json-server": "json-server data/db.json --port 8000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
