--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.12.2",
     "gh-pages": "^6.3.0",
     "json-server": "^1.0.0-beta.3",
+    "lucide": "^0.548.0",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
